--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
 body {
   background: rgb(40, 190, 230);
   color:white;
+  font-size: 20px;
+  font-weight: normal ;
+  text-align: justify;
+  margin-top: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
