--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,11 @@ nav {
     padding: 0;
     
     li {
-    display: inline-block;
+      float: left;
+      a{
+         display: block;
+        padding: 8px;
+      }
     }
   }
   
