--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,11 @@ input, textarea {
 
 .evento {
   h1{
-    font-weight: bolder;
+    font-weight: lighter;
   }
 }
 
-nav {
+.navbar {
   color:white;
   
   ul {
@@ -27,7 +27,7 @@ nav {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    
+    display: block;
     li {
       float: left;
       a{
