--- a/styles.css
+++ b/styles.css
@@ -8,24 +8,18 @@ body {
   margin-left: 0px;
   margin-right: 0px;
 }
-input, textarea {
-  width: 100%;
-  margin-right: 10px;
-}
 
-.evento {
-  h1{
-    font-weight: lighter;
-  }
+header {
+  margin: 0;
 }
 
 .navbar {
   display: block;
   background: rgb(30, 130, 160);
-  margin-top: 0px;
+  padding:0px;
   ul {
     list-style-type: none;
-    margin: 0;
+    margin: 0px;
     display: inline-block;
     li {
       margin-left: auto;
@@ -36,7 +30,10 @@ input, textarea {
         text-decoration: none;
         text-align: center;
         display: block;
-        padding: 8px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
       }
       a:hover{
         background: rgb(30, 75, 150);
@@ -47,6 +44,33 @@ input, textarea {
     }
   }
   
+}
+
+
+main{
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+input, textarea {
+  width: 100%;
+  margin-right: 10px;
+}
+
+.evento {
+  background: white;
+  color: rgb(30, 130, 160);
+  border: 3px dotted rgb(30, 130, 160);
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 5px;
+  h1{
+    width: 300px;
+    font-weight: bold;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .social-row{
