--- a/cadastro.css
+++ b/cadastro.css
@@ -1,21 +1,31 @@
-* {
-  border: 1px solid black;
-}
+@import url('https://fonts.googleapis.com/css2?family=Cantora+One&display=swap');
+
+
 main {
-  background-color: aquamarine;
-  border-radius: 20px;
+  background-color: white
+  border-radius: 5rem;
   margin: 1rem;
   padding: 1rem;
+  display: flex;
+}
+h1{
+    color: #4E7C41;
+    font-size: 2.5rem;
+}
+p{
+    color: #02598C;
+    font-size: 1.5rem;
 }
 .birds {
   width: 100%;
 }
 #banner {
-  display: inline-block;
   width: 40%;
+  background-color: #FFFCEB;
+  padding-left: 1rem;
+  border-top-left-radius: 1rem;
 }
 form {
-  display: inline-block;
   width: 55%;
 }
 .cadastroEvento {
