--- a/cadastro.css
+++ b/cadastro.css
@@ -32,14 +32,34 @@ form {
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 10px;
+  display: inline-block;
   input {
-    margin-bottom: 10px;
-    margin-top: 3px;
-  }
+    width: 100%;
+    height: 1.5rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    border: 1px solid #4E7C41;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+  } 
+  textarea {
+    width: 100%;
+    height: 3rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    border: 1px solid #4E7C41;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+  } 
   label {
+    width: 100%;
+    height: 1.5rem;
+    font-size: large;
     border-radius: 2px;
-    background-color: red;
-    color: white;
-    padding: 3px;
+    background-color: #4E7C41;
+    color: #FFFCEB;
+    font-weight: bold;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
   }
 }
